agregando curso Kubernetes a la lista

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li> Vagabundo</li>
         <li> Docker</li>
+        <li>Kubernetes</li>
         <li> Ansible </li>
         <li> Integración continua</li>
         <li>kubernetes</li>
