--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul>
-        <li> Vagabundo</li>
+        <li> Vagrant: Gerenciando máquinas virtuales</li>
         <li> Docker: Creando contenedores sin dolor de cabeza</li>
         <li> Ansible </li>
         <li> Integración continua</li>
