--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
 <body>
     <ul>
-        <li> Vagrant: Gerenciando máquinas virtuales</li>
-        <li> Curso de Docker: Creación de contenedores sin dolor de cabeza</li>
-        <li>Kubernetes</li>
+        <li> Vagabundo</li>
+        <li> Docker</li>
         <li> Ansible </li>
-        <li> Integración continua</li>
+        <li> Integración Continua</li>
         <li>kubernetes</li>
     </ul>
 </body>
