--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li> Vagrant: Gerenciando máquinas virtuales</li>
         <li> Curso de Docker: Creación de contenedores sin dolor de cabeza</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes: Introducción a la orquestación de containers</li>
         <li> Ansible </li>
         <li> Integración continua</li>
         <li>kubernetes</li>
