ordenando lista de cursos

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <ul>
-        <li> Vagrant: Gerenciando máquinas virtuales</li>
-        <li> Curso de Docker: Creación de contenedores sin dolor de cabeza</li>
-        <li>Kubernetes: Introducción a la orquestación de containers</li>
+        <li>Vagrant: Gerenciando máquinas virtuales</li>
+        <li>Docker: Creación de contenedores sin dolor de cabeza</li>
         <li>Ansible: Infraestructura como código</li>
-        <li> Integración continua</li>
+        <li>Integración continua: madures y productividad en el desarrollo</li>
+        <li>Kubernetes: Introducción a la orquestación de containers</li>
     </ul>
 </body>
 
